check_output.txt
    Checking sea-core v0.0.1 (/home/sprime01/projects/domainforge/sea-core)
error[E0277]: `ReferenceType` cannot be converted to a Python object
   --> sea-core/src/python/error.rs:121:63
    |
121 |             if let Err(e) = exc_obj.setattr("reference_type", reference_type) {
    |                                     -------                   ^^^^^^^^^^^^^^ unsatisfied trait bound
    |                                     |
    |                                     required by a bound introduced by this call
    |
help: the trait `IntoPyObject<'_>` is not implemented for `ReferenceType`
   --> sea-core/src/validation_error.rs:223:1
    |
223 | pub enum ReferenceType {
    | ^^^^^^^^^^^^^^^^^^^^^^
    = note: `IntoPyObject` is automatically implemented by the `#[pyclass]` macro
    = note: if you do not wish to have a corresponding Python type, implement it manually
    = note: if you do not own `ReferenceType` you can perform a manual conversion to one of the types in `pyo3::types::*`
    = help: the following other types implement trait `IntoPyObject<'py>`:
              &&'a T
              &&OsStr
              &&Path
              &&str
              &'a (T0, T1)
              &'a (T0, T1, T2)
              &'a (T0, T1, T2, T3)
              &'a (T0, T1, T2, T3, T4)
            and 150 others
note: required by a bound in `setattr`
   --> /home/sprime01/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/pyo3-0.24.2/src/types/any.rs:179:12
    |
176 |     fn setattr<N, V>(&self, attr_name: N, value: V) -> PyResult<()>
    |        ------- required by a bound in this associated function
...
179 |         V: IntoPyObject<'py>;
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `PyAnyMethods::setattr`

error[E0277]: the trait bound `ReferenceType: serde::Serialize` is not satisfied
   --> sea-core/src/wasm/error.rs:79:13
    |
 79 | /             serde_json::json!({
 80 | |                 "code": code,
 81 | |                 "errorType": error_type,
 82 | |                 "referenceType": reference_type,
 83 | |                 "name": name,
 84 | |                 "suggestion": suggestion,
 85 | |             })
    | |              ^
    | |              |
    | |______________unsatisfied trait bound
    |                required by a bound introduced by this call
    |
help: the trait `Serialize` is not implemented for `ReferenceType`
   --> sea-core/src/validation_error.rs:223:1
    |
223 | pub enum ReferenceType {
    | ^^^^^^^^^^^^^^^^^^^^^^
    = note: for local types consider adding `#[derive(serde::Serialize)]` to your `ReferenceType` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Serialize`:
              &'a T
              &'a mut T
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
            and 199 others
    = note: required for `&ReferenceType` to implement `Serialize`
note: required by a bound in `serde_json::to_value`
   --> /home/sprime01/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_json-1.0.145/src/value/mod.rs:997:8
    |
995 | pub fn to_value<T>(value: T) -> Result<Value, Error>
    |        -------- required by a bound in this function
996 | where
997 |     T: Serialize,
    |        ^^^^^^^^^ required by this bound in `to_value`
    = note: this error originates in the macro `$crate::json_internal` which comes from the expansion of the macro `serde_json::json` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `sea-core` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `sea-core` (lib test) due to 2 previous errors
